error messages for name taken and must create a person before adding any weights

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,3 +30,10 @@
     transform: rotate(360deg);
   }
 }
+
+#people_form {
+  border-radius: 25px;
+  border: 2px solid #c6c6c6;
+  padding: 20px;
+
+}
