--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,5 +35,11 @@
   border-radius: 25px;
   border: 2px solid #c6c6c6;
   padding: 20px;
-
 }
+
+.isa_error {
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
+
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
