--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,22 +32,31 @@
 }
 
 #people_form {
-  border-radius: 25px;
   background-color: white;
-  width: 1000px;
   padding: 20px;
+  width: 800px;
   display: inline-block;
   text-align: left;
 }
 #newWeight {
   text-align: center;
-  background-color: #b2eeff;
+  background-color: #3a7bf6;
 }
 
+.chart {
+  display: inline-block;
+}
 
 .isa_error {
     color: #D8000C;
     background-color: #FFD2D2;
+}
+
+#button {
+  margin: 15px;
+  background-color: #3a7bf6;
+
+
 }
 
 @import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
