--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,7 @@
 
 #newWeight {
   text-align: center;
-  background-color: #3a7bf6;
+  background-color: #2096f3;
   min-height: 400px;
   height: auto;
 }
@@ -54,8 +54,6 @@
   padding-bottom: 100px;
 }
 
-
-
 .isa_error {
     color: #D8000C;
     background-color: #FFD2D2;
@@ -63,12 +61,9 @@
 
 #button {
   margin: 15px;
-  background-color: #3a7bf6;
+  background-color: #2096f3;
 }
 
-#saveButton {
-  background-color: red;
-}
 
 #saveButtonDiv {
   height: 37px;
